install nicolaslopezj/searchable and laravel-debugbar

--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,11 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
-        "mcamara/laravel-localization": "^2.0"
+        "mcamara/laravel-localization": "^2.0",
+        "nicolaslopezj/searchable": "^1.13"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.13",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
