--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
+        "livewire/livewire": "^3.5",
         "mcamara/laravel-localization": "^2.0",
         "nicolaslopezj/searchable": "^1.13"
     },
